--- a/icicle/curves/curve_template/params.cuh.tmpl
+++ b/icicle/curves/curve_template/params.cuh.tmpl
@@ -19,6 +19,9 @@ namespace PARAMS_${curve_name_U} {
     static constexpr storage<limbs_count> one = {${fp_one}};
     static constexpr storage<limbs_count> zero = {${fp_zero}};
 
+    static constexpr storage<limbs_count> montgomery_r = {${fp_mont_r}};
+    static constexpr storage<limbs_count> montgomery_r_inv = {${fp_mont_r_inv}};
+
     static constexpr storage_array<omegas_count, limbs_count> omega = { {
         ${omega}
     } };
@@ -37,6 +40,7 @@ namespace PARAMS_${curve_name_U} {
   struct fq_config {
     static constexpr unsigned limbs_count = ${fq_num_limbs};
     static constexpr unsigned modulus_bit_count = ${fq_modulus_bit_count};
+    
     static constexpr storage<limbs_count> modulus = {${fq_modulus}};
     static constexpr storage<limbs_count> modulus_2 = {${fq_modulus_2}};
     static constexpr storage<limbs_count> modulus_4 = {${fq_modulus_4}};
@@ -44,9 +48,14 @@ namespace PARAMS_${curve_name_U} {
     static constexpr storage<2*limbs_count> modulus_squared = {${fq_modulus_squared}};
     static constexpr storage<2*limbs_count> modulus_squared_2 = {${fq_modulus_squared_2}};
     static constexpr storage<2*limbs_count> modulus_squared_4 = {${fq_modulus_squared_4}};
+    
     static constexpr storage<limbs_count> m = {${fq_m}};
     static constexpr storage<limbs_count> one = {${fq_one}};
     static constexpr storage<limbs_count> zero = {${fq_zero}};
+    
+    static constexpr storage<limbs_count> montgomery_r = {${fq_mont_r}};
+    static constexpr storage<limbs_count> montgomery_r_inv = {${fq_mont_r_inv}};
+
     // i^2, the square of the imaginary unit for the extension field
     static constexpr uint32_t i_squared = 1;
     // true if i^2 is negative
